adding files maybe for real

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,71 @@
 /* This is a multi-line
 comment. Add your CSS code
 from Unit 1 - 5 below  */
+
+
+h1{
+	font-size: 30px;
+	color: teal;
+	text-align: center;
+}
+
+h2{
+	font-size: 28px;
+	color: gold;
+	text-align: center;
+}
+p{
+	text-align: center;
+}
+
+.board{
+	height: 50%;
+	width: 50%;
+	display: inline-block;
+	float: left;
+	margin: 8%;
+}
+.card{
+	height: 200px;
+	width: 150px;
+	border: 3px solid black;
+	border-radius: 20px;
+	float: left;
+	background: yellow;
+	margin: 40px;
+}
+
+footer{
+	text-align: center;
+	background-color: #808080;
+	clear: both;
+}
+
+#name{
+	color: rgba(255, 0, 0, 0.9);
+}
+
+nav{
+	background-color: #808080;
+}
+
+nav a{
+	text-decoration: none;
+	background-color: #ffbf00;
+	color: white;
+	padding: 35px;
+	display: block;
+	float: left;
+}
+
+nav a:hover{
+	background-color: #ee5fc;
+}
+ .clearfix:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+}
