--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -3,20 +3,28 @@ comment. Add your CSS code
 from Unit 1 - 5 below  */
 
 
+h1,h2,p,a,footer{
+	font-family: 'Oswald', sans-serif;
+}
+
 h1{
 	font-size: 30px;
 	color: teal;
 	text-align: center;
+	padding: 10px;
 }
 
 h2{
 	font-size: 28px;
 	color: gold;
 	text-align: center;
+	padding: 5px;
 }
 p{
 	text-align: center;
 }
+
+
 
 .board{
 	height: 50%;
@@ -29,15 +37,20 @@ p{
 	height: 200px;
 	width: 150px;
 	border: 3px solid black;
-	border-radius: 20px;
 	float: left;
 	background: yellow;
 	margin: 40px;
 }
 
+img{
+	height: 200px;
+	width: 150px;
+}
+
 footer{
 	text-align: center;
 	background-color: #808080;
+	padding: 10px;
 	clear: both;
 }
 
@@ -59,8 +72,9 @@ nav a{
 }
 
 nav a:hover{
-	background-color: #ee5fc;
+	background-color: #808080;
 }
+
  .clearfix:after {
         visibility: hidden;
         display: block;
